tests/files/flow_controller_tests/should_run/108.cmdr
x = 0.5;
print arctanh(x);