tests/files/flow_controller_tests/should_fail/101.cmdr
x = "cat";
print arctanh(x);